content alignment fixed

--- a/nextjs/mau1-5427/styles/globals.css
+++ b/nextjs/mau1-5427/styles/globals.css
@@ -6,7 +6,7 @@
 
 body {
   display: grid;
-  place-content: center;
+  place-items: center;
   text-align: center;
   font-family: 'Poppins', sans-serif;
 }
